--- a/requirements.txt
+++ b/requirements.txt
@@ -61,11 +61,13 @@ python-dotenv==1.0.1
 python-multipart==0.0.20
 PyYAML==6.0.2
 pyzmq==26.2.1
+redis==5.2.1
 referencing==0.36.2
 requests==2.32.3
 rich==13.9.4
 rich-toolkit==0.13.2
 rpds-py==0.22.3
+setuptools==75.8.0
 shellingham==1.5.4
 six==1.17.0
 sniffio==1.3.1
@@ -85,4 +87,5 @@ watchfiles==1.0.4
 wcwidth==0.2.13
 webencodings==0.5.1
 websockets==14.2
+wheel==0.45.1
 yarg==0.1.9
