--- a/.gitignore
+++ b/.gitignore
@@ -126,7 +126,7 @@ celerybeat.pid
 
 # SageMath parsed files
 *.sage.py
-
+.migrations
 # Environments
 .env
 .venv
@@ -135,7 +135,7 @@ venv/
 ENV/
 env.bak/
 venv.bak/
-
+.idea
 # Spyder project settings
 .spyderproject
 .spyproject
